--- a/kube-scheduler-amd64/Dockerfile
+++ b/kube-scheduler-amd64/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/google_containers/kube-scheduler-amd64:v1.7.3
-MAINTAINER mritd <mritd@mritd.me>
+MAINTAINER dingchuang <359594776@qq.com>
