--- a/kubedns-amd64/Dockerfile
+++ b/kubedns-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/kubedns-amd64:1.9
-MAINTAINER mritd <mritd@mritd.me>
+FROM gcr.io/google_containers/kubedns-amd64:latest
+MAINTAINER dingchuang <359594776@qq.com>
