--- a/kube-dnsmasq-amd64/Dockerfile
+++ b/kube-dnsmasq-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/kube-dnsmasq-amd64:latest
+FROM gcr.io/google_containers/k8s-dns-dnsmasq-nanny-amd64:1.14.4
 MAINTAINER dingchuang <359594776@qq.com>
