--- a/kubernetes-dashboard-amd64/Dockerfile
+++ b/kubernetes-dashboard-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/kubernetes-dashboard-amd64:v1.6.1
-MAINTAINER mritd <mritd@mritd.me>
+FROM gcr.io/google_containers/kubernetes-dashboard-amd64:v1.6.3
+MAINTAINER dingchuang <259594776@qq.com>
