--- a/heapster-influxdb-amd64/Dockerfile
+++ b/heapster-influxdb-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/heapster-influxdb-amd64:v1.1.1
-MAINTAINER mritd <piml.lui@gmail.com>
+FROM gcr.io/google_containers/heapster-influxdb-amd64:v1.3.3
+MAINTAINER mritd <359594776g@qq.com>
