--- a/heapster-grafana-amd64/Dockerfile
+++ b/heapster-grafana-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/heapster-grafana-amd64:v4.2.0
-MAINTAINER mritd <piml.lui@gmail.com>
+FROM gcr.io/google_containers/heapster-grafana-amd64:v4.4.3
+MAINTAINER mritd <359594776@qq.com>
